--- a/app/src/main/res/layout/populayoutprofile.xml
+++ b/app/src/main/res/layout/populayoutprofile.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="10dp">
     <CheckBox android:id="@+id/PC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="PC"
-
+        android:button="@drawable/check_white"
+        android:paddingLeft="5dp"
 
 
         ></CheckBox>
@@ -14,31 +16,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Laptop"
-
+        android:button="@drawable/check_white"
+        android:paddingLeft="5dp"
         ></CheckBox>
     <CheckBox android:id="@+id/Mayin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Máy in"
-
+        android:button="@drawable/check_white"
+        android:paddingLeft="5dp"
         ></CheckBox>
     <CheckBox android:id="@+id/photocopy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Máy Photocopy"
-
+        android:button="@drawable/check_white"
+        android:paddingLeft="5dp"
         ></CheckBox>
     <CheckBox android:id="@+id/scan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Máy scan"
-
+        android:button="@drawable/check_white"
+        android:paddingLeft="5dp"
         ></CheckBox>
     <CheckBox android:id="@+id/fax"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Máy fax"
-
+        android:button="@drawable/check_white"
+        android:paddingLeft="5dp"
         ></CheckBox>
     <!--<Button-->
         <!--android:id="@+id/buttonok"-->
