--- a/app/src/main/res/layout/activity_frm_dang_ky.xml
+++ b/app/src/main/res/layout/activity_frm_dang_ky.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
 
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -25,6 +25,7 @@
         android:paddingRight="20dp"
         android:layout_marginTop="10dp"
         >
+
     <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -65,8 +66,9 @@
             android:ems="30"
             android:singleLine="false"
             android:maxLines="1"
-            android:inputType="text"
-            android:hint="Nhập họ và tên (*)"/>
+            android:inputType="textPersonName"
+            android:hint="Nhập họ và tên (*)"
+            android:imeOptions="flagNoFullscreen"/>
             <TextView
                 android:id="@+id/errorname"
                 android:layout_width="fill_parent"
