--- a/app/src/main/res/layout/activity_frm_bao_hu.xml
+++ b/app/src/main/res/layout/activity_frm_bao_hu.xml
@@ -24,7 +24,7 @@
                 android:paddingTop="15dp"
                 android:background="#00000000"
                 android:id="@+id/edSearch"
-                android:hint="Nhập thiết bị cần tìm"
+                android:hint=""
                 />
         </LinearLayout>
         <View
@@ -35,7 +35,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Vui lòng chọn nhóm thuyết bị"
+            android:text="Vui lòng chọn nhóm thiết bị"
             android:textStyle="bold"
             android:textColor="@color/mauden"
             android:layout_gravity="center"/>
