--- a/app/src/main/res/layout/activity_frm_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_frm_dang_nhap.xml
@@ -28,7 +28,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Nhập email"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:theme="@style/MyEditTextTheme"
+                />
             <TextView
                 android:id="@+id/txtEmail"
                 android:layout_width="wrap_content"
@@ -44,7 +46,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Nhập mật khẩu"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:theme="@style/MyEditTextTheme"/>
             <TextView
                 android:id="@+id/txtMatKhau"
                 android:layout_width="wrap_content"
