--- a/app/src/main/res/layout/activity_frm_dang_ky.xml
+++ b/app/src/main/res/layout/activity_frm_dang_ky.xml
@@ -68,7 +68,10 @@
             android:maxLines="1"
             android:inputType="textPersonName"
             android:hint="Nhập họ và tên (*)"
-            android:imeOptions="flagNoFullscreen"/>
+            android:imeOptions="flagNoFullscreen"
+            android:shadowColor="@color/mauxam"
+            android:theme="@style/EditTextStyle"
+          />
             <TextView
                 android:id="@+id/errorname"
                 android:layout_width="fill_parent"
@@ -99,7 +102,8 @@
             android:singleLine="false"
             android:maxLines="1"
             android:inputType="textEmailAddress"
-            android:hint="Email (*)"
+            android:hint="Nhập email (*)"
+            android:theme="@style/EditTextStyle"
             />
         <TextView
             android:id="@+id/erroEmail1"
@@ -137,6 +141,7 @@
             android:maxLines="1"
             android:inputType="textPassword"
             android:hint="Nhập mật khẩu (*)"
+            android:theme="@style/EditTextStyle"
             />
         <TextView
             android:id="@+id/errorpass1"
@@ -175,6 +180,7 @@
             android:maxLines="1"
             android:inputType="textPassword"
             android:hint="Xác nhận mật khẩu (*)"
+            android:theme="@style/EditTextStyle"
             />
         <TextView
             android:id="@+id/cfpassword"
@@ -212,6 +218,7 @@
             android:maxLines="1"
             android:inputType="number"
             android:hint="Nhập số điện thoại (*)"
+            android:theme="@style/EditTextStyle"
             />
         <TextView
             android:id="@+id/errorphone1"
@@ -253,7 +260,8 @@
             android:singleLine="false"
             android:maxLines="2"
             android:inputType="text"
-            android:hint="Nhập địa chỉ (*)"/>
+            android:hint="Nhập địa chỉ (*)"
+            android:theme="@style/EditTextStyle"/>
         <TextView
             android:id="@+id/erroraddress"
             android:layout_width="fill_parent"
