fix bug: request KH

--- a/app/src/main/res/layout/activity_frm_bao_hu.xml
+++ b/app/src/main/res/layout/activity_frm_bao_hu.xml
@@ -24,7 +24,7 @@
                 android:paddingTop="15dp"
                 android:background="#00000000"
                 android:id="@+id/edSearch"
-                android:hint=""
+                android:hint="Tìm kiếm"
                 />
         </LinearLayout>
         <View
