--- a/app/src/main/res/layout/activity_frm_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_frm_dang_nhap.xml
@@ -10,8 +10,8 @@
     tools:context="com.example.llh_pc.it_support.activities.frmDangNhap">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
         <ImageView
             android:layout_width="150dp"
