--- a/app/src/main/res/layout/activity_frm_child_post.xml
+++ b/app/src/main/res/layout/activity_frm_child_post.xml
@@ -25,7 +25,7 @@
                 android:paddingTop="15dp"
                 android:background="#00000000"
                 android:id="@+id/edSearch"
-                android:hint="Nhập thiết bị cần tìm"
+                android:hint="Tìm kiếm"
                 />
         </LinearLayout>
         <View
