--- a/app/src/main/res/layout/activity_frm_child_post.xml
+++ b/app/src/main/res/layout/activity_frm_child_post.xml
@@ -36,7 +36,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Vui lòng chọn nhóm thuyết bị"
+            android:text="Vui lòng chọn nhóm thiết bị"
             android:textStyle="bold"
             android:textColor="@color/mauden"
             android:layout_gravity="center"/>
