--- a/app/src/main/res/layout/activity_frm_dang_ky.xml
+++ b/app/src/main/res/layout/activity_frm_dang_ky.xml
@@ -70,7 +70,7 @@
             android:hint="Nhập họ và tên (*)"
             android:imeOptions="flagNoFullscreen"
             android:shadowColor="@color/mauxam"
-            android:theme="@style/EditTextStyle"
+            android:theme="@style/MyEditTextTheme"
           />
             <TextView
                 android:id="@+id/errorname"
@@ -103,7 +103,7 @@
             android:maxLines="1"
             android:inputType="textEmailAddress"
             android:hint="Nhập email (*)"
-            android:theme="@style/EditTextStyle"
+            android:theme="@style/MyEditTextTheme"
             />
         <TextView
             android:id="@+id/erroEmail1"
@@ -141,7 +141,7 @@
             android:maxLines="1"
             android:inputType="textPassword"
             android:hint="Nhập mật khẩu (*)"
-            android:theme="@style/EditTextStyle"
+            android:theme="@style/MyEditTextTheme"
             />
         <TextView
             android:id="@+id/errorpass1"
@@ -180,7 +180,7 @@
             android:maxLines="1"
             android:inputType="textPassword"
             android:hint="Xác nhận mật khẩu (*)"
-            android:theme="@style/EditTextStyle"
+            android:theme="@style/MyEditTextTheme"
 
             />
         <TextView
@@ -219,7 +219,7 @@
             android:maxLines="1"
             android:inputType="number"
             android:hint="Nhập số điện thoại (*)"
-            android:theme="@style/EditTextStyle"
+            android:theme="@style/MyEditTextTheme"
             />
         <TextView
             android:id="@+id/errorphone1"
@@ -262,7 +262,7 @@
             android:maxLines="2"
             android:inputType="text"
             android:hint="Nhập địa chỉ (*)"
-            android:theme="@style/EditTextStyle"/>
+            android:theme="@style/MyEditTextTheme"/>
         <TextView
             android:id="@+id/erroraddress"
             android:layout_width="fill_parent"
