--- a/app/src/main/res/layout/activity_search_map.xml
+++ b/app/src/main/res/layout/activity_search_map.xml
@@ -6,7 +6,18 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.llh_pc.it_support.activities.SearchMap">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="fill_parent" >-->
+
+        <!--<fragment-->
+            <!--android:id="@+id/map"-->
+            <!--android:name="com.google.android.gms.maps.MapFragment"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:apiKey="AIzaSyCNdYvJwpxD7qKY1_E-gRPh9_w59tnSV34"/>-->
+
+    <!--</RelativeLayout>-->
 
 </RelativeLayout>
