--- a/app/src/main/res/layout/activity_frm_dang_ky.xml
+++ b/app/src/main/res/layout/activity_frm_dang_ky.xml
@@ -71,12 +71,13 @@
             android:imeOptions="flagNoFullscreen"
             android:shadowColor="@color/mauxam"
             android:theme="@style/MyEditTextTheme"
+            android:maxLength="25"
           />
             <TextView
                 android:id="@+id/errorname"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="Vui lòng nhập họ và tên"
+                android:text="Nhập họ và tên"
                 android:textColor="@color/maudo"
                 android:gravity="left"
                 android:layout_marginTop="40dp"
@@ -104,12 +105,13 @@
             android:inputType="textEmailAddress"
             android:hint="Nhập email (*)"
             android:theme="@style/MyEditTextTheme"
+            android:maxLength="30"
             />
         <TextView
             android:id="@+id/erroEmail1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Vui lòng nhập email"
+            android:text="Nhập email"
             android:visibility="gone"
             android:layout_gravity="center"
             android:textColor="@color/maudo"/>
@@ -142,12 +144,13 @@
             android:inputType="textPassword"
             android:hint="Nhập mật khẩu (*)"
             android:theme="@style/MyEditTextTheme"
+            android:maxLength="30"
             />
         <TextView
             android:id="@+id/errorpass1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Vui lòng nhập mật khẩu"
+            android:text="Nhập mật khẩu"
             android:visibility="gone"
             android:layout_gravity="left"
             android:textColor="@color/maudo"/>
@@ -181,6 +184,7 @@
             android:inputType="textPassword"
             android:hint="Xác nhận mật khẩu (*)"
             android:theme="@style/MyEditTextTheme"
+            android:maxLength="30"
 
             />
         <TextView
@@ -220,6 +224,7 @@
             android:inputType="number"
             android:hint="Nhập số điện thoại (*)"
             android:theme="@style/MyEditTextTheme"
+            android:maxLength="30"
             />
         <TextView
             android:id="@+id/errorphone1"
@@ -262,7 +267,8 @@
             android:maxLines="2"
             android:inputType="text"
             android:hint="Nhập địa chỉ (*)"
-            android:theme="@style/MyEditTextTheme"/>
+            android:theme="@style/MyEditTextTheme"
+            android:maxLength="30"/>
         <TextView
             android:id="@+id/erroraddress"
             android:layout_width="fill_parent"
