--- a/app/src/main/res/layout/activity_frm_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_frm_dang_nhap.xml
@@ -10,6 +10,10 @@
     tools:context="com.example.llh_pc.it_support.activities.frmDangNhap">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
